<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Frag2"
    android:background="@color/gray"
    android:id="@+id/contFrag2">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:ignore="UseCompoundDrawables,UselessParent">  <!-- Puedes cambiar a "horizontal" si lo necesitas -->

        <!-- Aquí puedes agregar tus elementos que deseas dentro del LinearLayout -->

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginTop="40dp"
            android:background="@color/black"
            android:text="@string/Usr_rgs"
            android:textColor="#FFEBEE"
            android:textSize="30sp"
            tools:ignore="RtlHardcoded"
            />

        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@drawable/register"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/info_img_login"
            android:layout_marginTop="25dp"
            />

        <EditText
            android:id="@+id/editTextNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/Nombre"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:textColorHint="#FFEBEE"
            tools:ignore="VisualLintTextFieldSize"
            android:layout_marginTop="25dp"
            android:textAlignment="center"
            />

        <EditText
            android:id="@+id/editTextEdad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/Edad"
            android:inputType="number"
            android:minHeight="48dp"
            android:textColorHint="#FFEBEE"
            tools:ignore="VisualLintTextFieldSize"
            android:layout_marginTop="25dp"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/editTextUsr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/Hint_usr"
            android:inputType="text"
            android:minHeight="48dp"
            android:textColorHint="#FFEBEE"
            tools:ignore="VisualLintTextFieldSize"
            android:layout_marginTop="25dp"
            android:textAlignment="center"/>

        <EditText
            android:id="@+id/editTextPssw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/hint_contrase"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:textColorHint="#FFEBEE"
            tools:ignore="VisualLintTextFieldSize"
            android:layout_marginTop="25dp"
            android:textAlignment="center"/>

        <Button
            android:id="@+id/btn_acceder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/Registro_button"
            android:layout_marginTop="25dp"
            android:onClick="registrarUsuario"
            />


    </LinearLayout>
</FrameLayout>