<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".pantalla_P_admin"
    android:background="@color/black">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/principal_cliente"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:text="@string/texto_principal_Adm"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="35sp"/>

    <TextView
        android:id="@+id/info_p_cliente"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="350dp"
        android:text="@string/texto_Adm"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/info_p_cliente2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="700dp"
        android:text="@string/pprincipal"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="15sp" />

</FrameLayout>