<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".carga"
    android:background="#000000">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/app_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/app_name2"
            android:textColor="#FFF"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/dev"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/des"
            android:textColor="#FFF"
            android:textSize="20sp" />

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="300sp"
            android:layout_height="300sp"
            android:layout_marginTop="50sp"
            android:scaleType="centerInside"
            android:scaleX="1"
            android:scaleY="1"
            android:src="@drawable/spider" />

        <TextView
            android:id="@+id/dos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/dos"
            android:textColor="#FFF"
            android:textSize="30sp" />

        <com.airbnb.lottie.LottieAnimationView
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            app:lottie_autoPlay="true"
            app:lottie_fileName="animacion.json"
            app:lottie_imageAssetsFolder="assets"
            app:lottie_loop="true" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</RelativeLayout>
